cacti/branches/main/include/main.css
/* main styles */
#body {
	margin:  0px;
	padding: 0px;
	background-color: #ffffff;
	overflow: hidden;
	font-family: Arial, Verdana, Helvetica, sans-serif;
	font-size:.8em;
}

form {
	margin: 0px;
}

input {
	margin: 1px;
	padding: 2px;
}

tr {
	overflow: hidden;
	line-height: 1.5em;
}

th {
	overflow: hidden;
	font-weight:normal;
}

td {
	overflow: hidden;
}

img {
	border: 0px;
}

.img_info {
	border: 0px;
	padding: 3px;
}

.img_filter {
	border-width: 0px;
	vertical-align: middle;
	text-align: center;
	padding-bottom: 5px;
}

/* main navigation constructor classes */
#navbrcrumb {
	clear:both;
	color:#c1c1c1;
	margin: 0px;
	padding: 0px;
	height: 3.0em;
	background: #494949; /* Old browsers */
	background: -moz-linear-gradient(top, #494949 0%, #494949 5%, #393939 50%, #363636 65%, #363636 100%); /* FF3.6+ */
	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#494949), color-stop(5%,#494949), color-stop(50%,#393939), color-stop(65%,#363636), color-stop(100%,#363636)); /* Chrome,Safari4+ */
	background: -webkit-linear-gradient(top, #494949 0%,#494949 5%,#393939 50%,#363636 65%,#363636 100%); /* Chrome10+,Safari5.1+ */
	background: -o-linear-gradient(top, #494949 0%,#494949 5%,#393939 50%,#363636 65%,#363636 100%); /* Opera11.10+ */
	background: -ms-linear-gradient(top, #494949 0%,#494949 5%,#393939 50%,#363636 65%,#363636 100%); /* IE10+ */
	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#494949', endColorstr='#363636',GradientType=0 ); /* IE6-9 */
	background: linear-gradient(top, #494949 0%,#494949 5%,#393939 50%,#363636 65%,#363636 100%); /* W3C */
}

#navbrcrumb div {
	padding:0.6em 5px 0.2px 5px;
	text-align:center;
	background: #494949; /* Old browsers */
	background: -moz-linear-gradient(top, #494949 0%, #494949 5%, #393939 50%, #363636 65%, #363636 100%); /* FF3.6+ */
	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#494949), color-stop(5%,#494949), color-stop(50%,#393939), color-stop(65%,#363636), color-stop(100%,#363636)); /* Chrome,Safari4+ */
	background: -webkit-linear-gradient(top, #494949 0%,#494949 5%,#393939 50%,#363636 65%,#363636 100%); /* Chrome10+,Safari5.1+ */
	background: -o-linear-gradient(top, #494949 0%,#494949 5%,#393939 50%,#363636 65%,#363636 100%); /* Opera11.10+ */
	background: -ms-linear-gradient(top, #494949 0%,#494949 5%,#393939 50%,#363636 65%,#363636 100%); /* IE10+ */
	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#494949', endColorstr='#363636',GradientType=0 ); /* IE6-9 */
	background: linear-gradient(top, #494949 0%,#494949 5%,#393939 50%,#363636 65%,#363636 100%); /* W3C */
}

#navbrcrumb div a {
	color: #e1e1e1;
	text-decoration: none;
}

#navbrcrumb div a:hover {
	text-decoration: none;
	color: #ffffff;
}

#wrapper {
	position: fixed;
	overflow: auto;
	left: 0px;
	top: 5.2em;
	width: 100%;
	height: 98%;
	/* shadow */
	background: #a2a2a2; /* Old browsers */
	background: -moz-linear-gradient(top, #a2a2a2 0%, #b3b3b3 14%, #e0e0e0 43%, #f2f2f2 71%, #ffffff 86%, #ffffff 100%); /* FF3.6+ */
	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#a2a2a2), color-stop(14%,#b3b3b3), color-stop(43%,#e0e0e0), color-stop(71%,#f2f2f2), color-stop(86%,#ffffff), color-stop(100%,#ffffff)); /* Chrome,Safari4+ */
	background: -webkit-linear-gradient(top, #a2a2a2 0%,#b3b3b3 14%,#e0e0e0 43%,#f2f2f2 71%,#ffffff 86%,#ffffff 100%); /* Chrome10+,Safari5.1+ */
	background: -o-linear-gradient(top, #a2a2a2 0%,#b3b3b3 14%,#e0e0e0 43%,#f2f2f2 71%,#ffffff 86%,#ffffff 100%); /* Opera11.10+ */
	background: -ms-linear-gradient(top, #a2a2a2 0%,#b3b3b3 14%,#e0e0e0 43%,#f2f2f2 71%,#ffffff 86%,#ffffff 100%); /* IE10+ */
	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a2a2a2', endColorstr='#ffffff',GradientType=0 ); /* IE6-9 */
	background: linear-gradient(top, #a2a2a2 0%,#b3b3b3 14%,#e0e0e0 43%,#f2f2f2 71%,#ffffff 86%,#ffffff 100%); /* W3C */
}

#vsplitter {
	background: #666666 url('../images/vsplitter0.gif') repeat-y scroll 1px 0px;
	-moz-user-select: none;
	cursor: e-resize;
	height: 100%;
	position: absolute;
	width: 5px;
	z-index: 10;
}

#vsplitter_toggle {
	background: transparent url('../images/vsplitter1.gif') no-repeat scroll 0px 0px;
	cursor: pointer;
	height: 32px;
	opacity: 0.7;
	overflow: hidden;
	position: absolute;
	width: 6px;
	z-index: 11;
}

#content {
	position: fixed;
	overflow: auto;
	margin-right: 0px;
	padding: 8px 8px 8px 10px;
	width: auto;
	height: 100%;
	/* shadow */
	background: #a2a2a2; /* Old browsers */
	background: -moz-linear-gradient(top, #a2a2a2 0%, #b3b3b3 14%, #e0e0e0 43%, #f2f2f2 71%, #ffffff 86%, #ffffff 100%); /* FF3.6+ */
	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#a2a2a2), color-stop(14%,#b3b3b3), color-stop(43%,#e0e0e0), color-stop(71%,#f2f2f2), color-stop(86%,#ffffff), color-stop(100%,#ffffff)); /* Chrome,Safari4+ */
	background: -webkit-linear-gradient(top, #a2a2a2 0%,#b3b3b3 14%,#e0e0e0 43%,#f2f2f2 71%,#ffffff 86%,#ffffff 100%); /* Chrome10+,Safari5.1+ */
	background: -o-linear-gradient(top, #a2a2a2 0%,#b3b3b3 14%,#e0e0e0 43%,#f2f2f2 71%,#ffffff 86%,#ffffff 100%); /* Opera11.10+ */
	background: -ms-linear-gradient(top, #a2a2a2 0%,#b3b3b3 14%,#e0e0e0 43%,#f2f2f2 71%,#ffffff 86%,#ffffff 100%); /* IE10+ */
	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a2a2a2', endColorstr='#ffffff',GradientType=0 ); /* IE6-9 */
	background: linear-gradient(top, #a2a2a2 0%,#b3b3b3 14%,#e0e0e0 43%,#f2f2f2 71%,#ffffff 86%,#ffffff 100%); /* W3C */
}
/* ... */

